kubernetes/apps/observability/capacitor/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - capacitor.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: capacitor
          port: 9000
